chore: integrate the formerly-separate indexer
This will make bibxml-indexer repository obsolete
